Create metrics.yml for scheduled metrics generation
Add a GitHub Actions workflow for generating metrics using the TokyoNight theme.

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,1 +1,52 @@
+name: Metrics (TokyoNight)
 
+on:
+  schedule:
+    - cron: "0 */12 * * *"   # Atualiza a cada 12h
+  workflow_dispatch:
+  push:
+    branches: ["main"]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Generate GitHub Metrics (TokyoNight)
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+
+          user: rafaelmagnog
+          template: classic
+          base: header, activity, community, repositories, metadata
+
+          # Tema TokyoNight (cores customizadas)
+          config_timezone: America/Sao_Paulo
+          config_border: yes
+          config_radius: 12
+          config_padding: 20
+
+          # Cores TokyoNight  
+          config_colors: |
+            title: "#7aa2f7"
+            text: "#c0caf5"
+            icon: "#bb9af7"
+            background: "#1a1b26"
+            border: "#414868"
+            tag: "#9ece6a"
+
+          # Linguagens (modo profissional)
+          plugins_languages: yes
+          plugins_languages_ignored: html, css
+          plugins_languages_sections: most-used
+          plugins_languages_details: percentage
+          plugins_languages_colors: github
+          plugins_languages_limit: 8
+          plugins_languages_threshold: 2%
+
+          # Commits, contribuições e repos
+          plugins_commits: yes
+          plugins_followup: yes
+          plugins_stargazers: yes
+          plugins_repositories: yes
+          plugins_lines: yes
