--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,52 +1,43 @@
 name: Metrics (TokyoNight)
 
 on:
+  workflow_dispatch: # permite rodar manualmente
   schedule:
-    - cron: "0 */12 * * *"   # Atualiza a cada 12h
-  workflow_dispatch:
-  push:
-    branches: ["main"]
+    - cron: "0 */12 * * *" # atualiza a cada 12h
 
 jobs:
-  build:
+  github-metrics:
     runs-on: ubuntu-latest
     steps:
-      - name: Generate GitHub Metrics (TokyoNight)
+      - name: Generate GitHub Metrics
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
 
+          # Usuário alvo
           user: rafaelmagnog
           template: classic
           base: header, activity, community, repositories, metadata
 
-          # Tema TokyoNight (cores customizadas)
-          config_timezone: America/Sao_Paulo
-          config_border: yes
-          config_radius: 12
-          config_padding: 20
+          # Tema
+          config_presets: tokyonight
 
-          # Cores TokyoNight  
-          config_colors: |
-            title: "#7aa2f7"
-            text: "#c0caf5"
-            icon: "#bb9af7"
-            background: "#1a1b26"
-            border: "#414868"
-            tag: "#9ece6a"
+          # Linguagens
+          plugin_languages: yes
+          plugin_languages_limit: 10
+          plugin_languages_details: bytes-size, percentage
+          plugin_languages_sections: most-used
+          plugin_languages_threshold: 0%
 
-          # Linguagens (modo profissional)
-          plugins_languages: yes
-          plugins_languages_ignored: html, css
-          plugins_languages_sections: most-used
-          plugins_languages_details: percentage
-          plugins_languages_colors: github
-          plugins_languages_limit: 8
-          plugins_languages_threshold: 2%
+          # Commits
+          plugin_followup: yes
+          plugin_followup_sections: repositories, user
 
-          # Commits, contribuições e repos
-          plugins_commits: yes
-          plugins_followup: yes
-          plugins_stargazers: yes
-          plugins_repositories: yes
-          plugins_lines: yes
+          # Linhas de código
+          plugin_lines: yes
+
+          # Repositórios
+          plugin_repositories: yes
+
+          # Stargazers
+          plugin_stargazers: yes
