--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           token: ${{ secrets.METRICS_TOKEN }}
 
+          # Caminho do arquivo de saída (IMPORTANTE)
+          filename: assets/github/metrics.svg
+
           # Usuário alvo
           user: rafaelmagnog
           template: classic
